All feeds working

--- a/FeedReader/templates/FeedReader/home.html
+++ b/FeedReader/templates/FeedReader/home.html
@@ -43,6 +43,10 @@
     <meta name="msapplication-TileColor" content="#ffffff"/>
     <meta name="msapplication-TileImage" content="{% static 'icons/ms-icon-144x144.png' %}"/>
     <meta name="theme-color" content="#ffffff"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
 
@@ -138,15 +142,15 @@
                     <div class="row navbar-collapse collapse">
                         <div class="col-xs-12">
                             <ul class="leftNav nav navbar-nav">
-                                <h2> FeedReader</h2>
+                                <h4> FeedReader</h4>
                                 {% for object in objects %}
                                 <li>
                                     <div class="leftNav-item-wrapper">
-                                        <button class="collapsible" style="background-color:#003366 ; color:white; cursor: pointer;padding: 18px;width: 100%;border: none;text-align: left;outline: none;font-size: 15px;"> {{ object.top_heading}}</button>
-                                                <div class = "content">
+                                        <a href="#!" data-toggle="collapse" data-target="#{{ object.top_heading | length }}" style="background-color:#003366 ; color:white; cursor: pointer;padding: 18px;width: 100%;border: none;text-align: left;outline: none;font-size: 15px;"> {{ object.top_heading}}</a>
+                                                <div id = "{{ object.top_heading | length }}" class = "collapse" >
                                                     {%  for item, link in object.sub_headings%}
                                                     <a href="{{ link}}" style="text-decoration: none"> {{ item}}</a>
-                                                        {% endfor %}
+                                                    {% endfor %}
                                                 </div>
                                     </div>
                                 </li>
@@ -162,7 +166,7 @@
             <div id="main-content" role="main" class="contentPageMainColumn col-sm-11 col-md-7 col-lg-9">
                 <h1>Feeds </h1>
                 {% for feed in Feed %}
-                    <div style="background-color:whitesmoke;"><p> <a href="{{ feed.link }}" target="_blank" style="text-decoration: none"><h2>{{ feed.title }}</h2></a>
+                    <div style="background-color:whitesmoke;"><p> <a href="{{ feed.link }}" target="_blank" style="text-decoration: none"><h4>{{ feed.title }}</h4></a>
                      {{ feed.description|safe }}
                     </p></div><br>
                 {%  endfor %}
